c/src/test/resources/c/mini_bnc/valid/malloc.ctrl
<controlFile>
  <sourceFile name="malloc.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="10" />
  </run>
</controlFile>