c/src/test/resources/c/mini_bnc/invalid/mergePathType.ctrl
<controlFile>
  <sourceFile name="mergePathType.c" id="1" />
  <run>
    <startPosition fileId="1" line="1" />
    <endPosition fileId="1" line="10" />
  </run>
</controlFile>